fix(ui): widgets gap

--- a/packages/ui/src/assets/scss/layers/widgets.scss
+++ b/packages/ui/src/assets/scss/layers/widgets.scss
@@ -7,7 +7,7 @@
   & > &-tiles {
     @include list-unstyled;
     display: grid;
-    gap: 8px;
+    gap: 16px;
 
     > .widget-tile {
       border: 1px solid var(--#{$prefix}stroke);
